tests/valid/valid_any_types.csl
config AnyTypes {
  meta?: any{};
  raw?: any[];
}
