tests/invalid/invalid_any_array_annotation.csl
config InvalidAnyArrayAnn {
  list: any[] @min_length(1);
}
